1. A list of tasks appears 2. When you press a task, it dies 3. Also you can update this list

--- a/app/src/main/res/layout/item_view.xml
+++ b/app/src/main/res/layout/item_view.xml
@@ -32,7 +32,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:text="tap to kill and do Refresh"
+            android:text="tap to kill"
             android:textColor="#a70800"
             android:textSize="10dp" />
     </RelativeLayout>
